Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4512

POSIX copytool option "--report" is non-obvious and functionality is broken

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0, Lustre 2.5.1
    • None
    • None
    • 3
    • HSM
    • 12349

      The POSIX copytool supports a "--report N" option, where N is an interval in seconds between copytool progress reports to the CDT. This option is intended to allow a change from the default interval of 30 seconds. At least, this is what the code indicates is expected to happen. Unfortunately, it seems supplying this option with any positive integer (other values were not tested) results in the copytool attempting to send reports many times per second. There is also no short version of the switch.

      In a forthcoming patch, I intend to fix this bug and also propose a rename of the "-report" option to "-update-progress, -u".

            mjmac Michael MacDonald (Inactive)
            mjmac Michael MacDonald (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: